fix scroll bar error

--- a/src/renderer/src/locales/ja.json
+++ b/src/renderer/src/locales/ja.json
@@ -17,7 +17,7 @@
   },
   "Final2xHome": {
     "text0": "削除が成功しました",
-    "text1": "ここに画像やフォルダをドラッグ＆ドロップしてアップロードしてください"
+    "text1": "ここにファイルをおいてアップロードしてください"
   },
   "Final2xSettings": {
     "text0": "デバイスの負荷。GPUの表示順が正しくない場合は、別のものを選択してください",
