pip ver support, add error dialog

--- a/src/renderer/src/locales/en.json
+++ b/src/renderer/src/locales/en.json
@@ -13,7 +13,9 @@
     "text5": "Processing failed, skipping",
     "text6": "START",
     "text7": "TERMINATE",
-    "text8": "LOG"
+    "text8": "LOG",
+    "text9": "Processing failed",
+    "text10": "Please click on the log to view the error message"
   },
   "Final2xHome": {
     "text0": "Removal successful",
