--- a/src/renderer/src/locales/ja.json
+++ b/src/renderer/src/locales/ja.json
@@ -13,7 +13,9 @@
     "text5": "処理に失敗しました。スキップします",
     "text6": "開始",
     "text7": "中止",
-    "text8": "ログ"
+    "text8": "ログ",
+    "text9": "処理失敗",
+    "text10": "エラーメッセージを確認するには、ログをクリックしてください"
   },
   "Final2xHome": {
     "text0": "削除が成功しました",
