--- a/src/renderer/src/locales/zh.json
+++ b/src/renderer/src/locales/zh.json
@@ -13,7 +13,9 @@
     "text5": "处理失败，跳过",
     "text6": "开始",
     "text7": "终止",
-    "text8": "日志"
+    "text8": "日志",
+    "text9": "处理失败",
+    "text10": "请点击日志查看错误信息"
   },
   "Final2xHome": {
     "text0": "移除成功",
